# PracticeMakesYou_2

./: .gitignore  10_practice.cpp  12_reverseSentenceWordWise.cpp  17_zigzagArray.cpp  1_JewelsandStones.cpp  20_trieDataStructure.cpp  21_toggleBitsinRange.cpp  23_subArray_sum_problem.cpp  25_paranthesisBalanceCheck.cpp  26_nextGreaterElement.cpp  27_duplicatesInarrayOF1toN.cpp  29_RelativeSorting.cpp  2_PQ_of_multiAttributeData.cpp  31_SmartPointersIn_CPP.cpp  33_kadane_Max_subarray_problem.cpp  34_mergeSort.cpp  35_minimumStations.cpp  37_LRU_Cache.cpp  38_AutotypeInference.cpp  39_tempCodeRunnerFile.cpp  3_excelsheetproblem.cpp  40_reverseBits.cpp  42_MedianOfRunningStreamofNumbers.cpp  44_evenOddParitySortingArray.cpp  45_parityWiseSortInposition.cpp  46_Max_Min_Sum_in_Array.cpp  47_anaGramGroupSort.cpp  48_anagramGroupingviaTrie.cpp  49_connectedIslandsViaDFS.cpp  4_intersection2.cpp  50_Luxoft_counter.c  51_test.cpp  52_MergeSort.cpp  52_functors.cpp  5_structAlignmentAndPadding.c  7_countTriplets1.cpp  8_longestPOsitiveSubarray.cpp  9_parityQuery.cpp  ArrayEqualityTest.cpp  AutotypeInference.cpp  (+117 more)
AMD_AUG_2024/: 1.c  2.c
AMD_feb_14_2022/: amd1.cpp  amd2.cpp
Adobeinterview/: test1.cpp
Amazon_Intel/: amazon1.cpp  intel_1.cpp
ArdenDertatQuestions/: 18_findEvenOccuringNum.cpp  24_nextgreaterNumber.cpp  2_MAtrixRegionSumQuestion.cpp  6_stringShuffelProblem.cpp  Codility_goodQuestion.cpp
Array/: 13_sortingArrayByfrequency.cpp  14_largestnumberFromagivenArrayNumber.cpp  24_midSlopeOFaRray.cpp  (+20 more)
cmakeTute/: CMakeLists.txt  matMul.cpp
cmakeTute/Adder/: adder.cpp
(+327 files in other folders)
